--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@react-email/components": "^0.0.26",
     "axios": "^1.7.7",
     "bottleneck": "^2.19.5",
     "class-variance-authority": "^0.7.0",
@@ -36,6 +37,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
     "postcss": "^8",
+    "react-email": "3.0.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
